--- a/workspace-1.9.4/build.gradle
+++ b/workspace-1.9.4/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
     }
 }
@@ -19,7 +19,8 @@ plugins {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.0.0-1.8.9.2318"
+
+version = "1.0.0-1.9.4.2051"
 group = "nge.lk.mods.simplemacros"
 archivesBaseName = "simplemacros"
 
@@ -29,10 +30,10 @@ compileJava {
 }
 
 minecraft {
-    version = "1.8.9-11.15.1.2318-1.8.9"
+    version = "1.9.4-12.17.0.2051"
     runDir = "run"
 
-    mappings = "stable_20"
+    mappings = "snapshot_20160518"
 
     replace "@VERSION@", project.version
     replaceIn "SimpleMacrosMod.java"
@@ -43,7 +44,7 @@ repositories {
 }
 
 dependencies {
-    compile 'nge.lk.mods.commonlib:commonlib:1.0.0-1.8.9.2318'
+    compile 'nge.lk.mods.commonlib:commonlib:1.0.0-1.9.4.2051'
 }
 
 processResources {
@@ -70,7 +71,7 @@ tasks.build.dependsOn reobfShadowJar
 shadowJar {
     classifier = null
     dependencies {
-        include(dependency('nge.lk.mods.commonlib:commonlib:1.0.0-1.8.9.2318'))
+        include(dependency('nge.lk.mods.commonlib:commonlib:1.0.0-1.9.4.2051'))
     }
     exclude 'dummyThing'
     relocate 'nge.lk.mods.commonlib', 'nge.lk.mods.simplemacros.common'
