--- a/workspace-1.10.2/build.gradle
+++ b/workspace-1.10.2/build.gradle
@@ -1,10 +1,7 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
+        maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
@@ -20,20 +17,20 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
-version = "1.0.0-1.9.4.2051"
+version = "1.2.0-1.10.2.2511"
 group = "nge.lk.mods.simplemacros"
 archivesBaseName = "simplemacros"
 
-sourceCompatibility = targetCompatibility = '1.8'
+sourceCompatibility = targetCompatibility = "1.8"
 compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
+    sourceCompatibility = targetCompatibility = "1.8"
 }
 
 minecraft {
-    version = "1.9.4-12.17.0.2051"
+    version = "1.10.2-12.18.3.2511"
     runDir = "run"
 
-    mappings = "snapshot_20160518"
+    mappings = "snapshot_20161111"
 
     replace "@VERSION@", project.version
     replaceIn "SimpleMacrosMod.java"
@@ -44,7 +41,7 @@ repositories {
 }
 
 dependencies {
-    compile 'nge.lk.mods.commonlib:commonlib:1.0.0-1.9.4.2051'
+    compile 'nge.lk.mods.commonlib:commonlib:1.0.0-1.10.2.2511'
 }
 
 processResources {
@@ -71,7 +68,7 @@ tasks.build.dependsOn reobfShadowJar
 shadowJar {
     classifier = null
     dependencies {
-        include(dependency('nge.lk.mods.commonlib:commonlib:1.0.0-1.9.4.2051'))
+        include(dependency('nge.lk.mods.commonlib:commonlib:1.0.0-1.10.2.2511'))
     }
     exclude 'dummyThing'
     relocate 'nge.lk.mods.commonlib', 'nge.lk.mods.simplemacros.common'
