--- a/workspace-1.12.2/build.gradle
+++ b/workspace-1.12.2/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
     }
 }
@@ -17,20 +17,20 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
-version = "1.2.0-1.11.2.2588"
+version = "1.0.0-1.12.2.2623"
 group = "nge.lk.mods.simplemacros"
 archivesBaseName = "simplemacros"
 
-sourceCompatibility = targetCompatibility = "1.8"
+sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
-    sourceCompatibility = targetCompatibility = "1.8"
+    sourceCompatibility = targetCompatibility = '1.8'
 }
 
 minecraft {
-    version = "1.11.2-13.20.1.2588"
+    version = "1.12.2-14.23.2.2623"
     runDir = "run"
 
-    mappings = "snapshot_20161220"
+    mappings = "snapshot_20171003"
 
     replace "@VERSION@", project.version
     replaceIn "SimpleMacrosMod.java"
@@ -41,7 +41,7 @@ repositories {
 }
 
 dependencies {
-    compile 'nge.lk.mods.commonlib:commonlib:1.0.0-1.11.2.2588'
+    compile 'nge.lk.mods.commonlib:commonlib:1.0.0-1.12.2.2623'
 }
 
 processResources {
@@ -68,7 +68,7 @@ tasks.build.dependsOn reobfShadowJar
 shadowJar {
     classifier = null
     dependencies {
-        include(dependency('nge.lk.mods.commonlib:commonlib:1.0.0-1.11.2.2588'))
+        include(dependency('nge.lk.mods.commonlib:commonlib:1.0.0-1.12.2.2623'))
     }
     exclude 'dummyThing'
     relocate 'nge.lk.mods.commonlib', 'nge.lk.mods.simplemacros.common'
